--- a/src/css/swiper-styles.css
+++ b/src/css/swiper-styles.css
@@ -44,7 +44,7 @@ body {
 
 .swiper-slide img {
     display: block;
-    /* object-fit: fill; */
+    object-fit: fill;
     width: 180px;
     height: 240px;
     object-fit: cover;
