--- a/src/css/image.scss
+++ b/src/css/image.scss
@@ -130,7 +130,7 @@
 // 박스 선 숨기기
 td,
 th {
-    // border: none;
+    border: none;
 }
 
 // ==================================배경=============================================
