--- a/src/css/join.scss
+++ b/src/css/join.scss
@@ -1,3 +1,60 @@
-#root {
-  padding-top: 54px;
+/*모든요소의 기본 마진 패딩, 사이징 초기화*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  outline: none;
+}
+
+.abc{
+  width: 100px;
+  text-align: left;
+  height:20px;
+}
+.def{
+  width:200px;
+  text-align:right;
+  height:20px;
+}
+.addr{
+  height:20px;
+}
+ 
+/*가입페이지 이동버튼*/
+.login__register a {
+  color: #0095f6;
+}
+// 성별라디오
+.select {
+  // padding: 15px 10px;
+  // margin-right: 10px;
+}
+.select input[type='radio'] {
+  display: none;
+}
+.select input[type='radio'] + label {
+  margin-right: 10px;
+  display: inline-block;
+  cursor: pointer;
+  height: 35px;
+  width: 95px;
+  border: 1px solid #ccc;
+  line-height: 33px;
+  text-align: center;
+  font-size: 13px;
+  border-radius: 3px;
+  margin-bottom: 12px;
+}
+.select input[type='radio'] + label {
+  background-color: #fff;
+  transition: background 0.5s;
+  color: #333;
+}
+.select input[type='radio']:checked + label {
+  background-color: rgb(156, 156, 248);
+  
+  opacity: 1;
+  color: white;
 }
