--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -96,7 +96,7 @@ login.scss
     width: 100%;
     height: 35px;
     background-color: rgba(152, 152, 255, 0.179);
-    color: rgb(58, 58, 58);
+    color: rgb(78, 78, 78);
     margin-bottom: 6px;
     font-weight: 700;
     border-radius: 3px;
@@ -161,7 +161,10 @@ login.scss
     line-height: 40px;
     padding: 0;
   }
-  
+  .login__register a {
+    font-size: 17px
+  }
+
   /*계정이 없으신가요?*/
   .login__register span {
     font-size: 15px;
@@ -178,20 +181,3 @@ login.scss
  color:#0095f6
  font-size 40px;
 }
-  
-  /* 버튼디자인 */
-  .cta {
-    margin-right: 10px;
-    padding: 5px 9px;
-    border: 1px solid rgba(var(--ca6, 219, 219, 219), 1);
-    border-radius: 4px;
-    color: #262626;
-    font-weight: bold;
-    background: transparent;
-  }
-  
-  /*버튼 블루*/
-  .cta.blue {
-    background: #0095f6 !important;
-    color: #fff !important;
-  }
