--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -12,6 +12,7 @@ p {
 }
 .fccommant {
   background-color: #fff;
+        border-radius: 0 0 10px 10px;
   // margin-left: -5px;
 }
 
@@ -67,7 +68,7 @@ p {
   // padding-right: 10px;
   // border: 1px solid black;
   background-color: #fff;
-  // border-radius: 10px;
+  border-radius: 10px 10px 0 0;
   // border-collapse: collapse;
 }
 
