게시판 수정

--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -4,7 +4,7 @@
     width: 80%;
     align-items: center;
     justify-content: center;
-    .headers {
+    .boardheaders {
       margin-top: 40px;
       margin-bottom: 15px;
       height: 40px;
