--- a/src/css/boardupdate.scss
+++ b/src/css/boardupdate.scss
@@ -1,5 +1,8 @@
 #root {
   .boardUpdate {
+    p {
+      font-size: 40px;
+    }
     .updateForm {
       margin-top: 40px;
       margin-bottom: 40px;
