--- a/src/css/swiper-styles.css
+++ b/src/css/swiper-styles.css
@@ -1,32 +1,32 @@
 #app {
-    height: 100%;
+    height: 100%
 }
 
-body,
-html {
+html,
+body {
     position: relative;
     height: 100%;
 }
 
 body {
-    background-color: rgb(248, 247, 247);
+    background: rgb(248, 247, 247);
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
     color: #000;
     margin: 0;
-    /* padding: px; */
+    padding: 0;
 }
 
 .swiper {
-    width: 100%;
+    width: 700px;
     height: 500px;
-    /* border: 5px solid silver; */
-    /* border-radius: 5px; */
-    /* box-shadow: 0 0 20px #ccc inset; */
 }
 
 .swiper-slide {
-    /* text-align: center; */
-    justify-content: center;
-    /* 좌우 기준 중앙정렬 */
+    text-align: center;
+    font-size: 18px;
+    /* background: #fff; */
+
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -39,12 +39,14 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
-    align-items: inherit;
+    align-items: center;
 }
 
 .swiper-slide img {
     display: block;
-    width: 95%;
-    height: 350px;
-    /* object-fit: cover; */
+    /* object-fit: fill; */
+    width: 210px;
+    height: 240px;
+    border-radius: 10px;
+    object-fit: cover;
 }
