--- a/src/css/boardarticle.scss
+++ b/src/css/boardarticle.scss
@@ -1,6 +1,8 @@
 #root {
   .boardTr {
-    td {
+    .articleId {
+      font-size: 25px;
+      color: black;
     }
     .boardLike {
       font-size: 25px;
