--- a/src/css/join.scss
+++ b/src/css/join.scss
@@ -1,28 +1,18 @@
-/*모든요소의 기본 마진 패딩, 사이징 초기화*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-  outline: none;
-}
-
-.abc{
+.abc {
   width: 100px;
   text-align: left;
-  height:20px;
-  font-size:14px
+  height: 20px;
+  font-size: 14px;
 }
-.def{
-  width:200px;
-  text-align:right;
-  height:20px;
+.def {
+  width: 200px;
+  text-align: right;
+  height: 20px;
 }
-.addr{
-  height:20px;
+.addr {
+  height: 20px;
 }
- 
+
 /*가입페이지 이동버튼*/
 .login__register a {
   color: #0095f6;
@@ -55,7 +45,11 @@
 }
 .select input[type='radio']:checked + label {
   background-color: rgb(156, 156, 248);
-  
+
   opacity: 1;
   color: white;
+}
+.joinSearchTd {
+}
+.joinSearch {
 }
