--- a/src/css/boardarticle.scss
+++ b/src/css/boardarticle.scss
@@ -1,8 +1,12 @@
 #root {
   .boardTr {
-    .articleId {
-      font-size: 25px;
-      color: black;
+    td {
+      height: 20px;
+      p {
+        height: 20px;
+        padding: 0;
+        font-size: 30px;
+      }
     }
     .boardLike {
       font-size: 25px;
