--- a/src/css/boardarticle.scss
+++ b/src/css/boardarticle.scss
@@ -3,9 +3,10 @@
     td {
       height: 20px;
       p {
-        height: 20px;
+        margin: 0;
+        height: 40px;
         padding: 0;
-        font-size: 30px;
+        font-size: 20px;
       }
     }
     .boardLike {
