--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -21,7 +21,7 @@ login.scss
   height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: rgba(var(--b3f, 250, 250, 250), 1);
+  // background-color: rgba(var(--b3f, 250, 250, 250), 1);
 }
 
 /*모든 버튼은 포인터*/
@@ -98,8 +98,8 @@ button {
   font-size: 25px;
   border: 0;
   outline: 0;
-  width: 100%;
-  height: 35px;
+  width: 330px;
+  height: 40px;
   background-color: rgba(152, 152, 255, 0.179);
   color: rgb(78, 78, 78);
   margin-bottom: 6px;
