--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -1,117 +1,154 @@
 body {
-// background-color: rgb(248, 247, 247);
+  // background-color: rgb(248, 247, 247);
 
-#root {
-  padding-top: 10px;
-}
-
-p {
-  margin-bottom: 10px;
-  font-family: 'Dongle', sans-serif;
-  font-size: 40px;
-}
-.fccommant {
-  background-color: #fff;
-        border-radius: 0 0 10px 10px;
-  // margin-left: -5px;
-}
-
-.fcinput{
-  margin-bottom: 10px;
-  // background: transparent;
-  border-radius: 10px;
-  background-color: rgb(248, 245, 245);
-  text-align: center;
-  border: 0px solid black;
-  font-size: 15px;
-}
-
-.inputbt {
-  height: 25px;
-}
-
-.mainbox {
-// display: block;
-  // margin:20px;
-  margin: auto;
-  width: 700px;
-  // height: 200px;
-  // overflow: auto;
+  #root {
+    padding-top: 10px;
+  }
+  .mainLike {
+    margin: 0;
+    // margin-right: 10px;
+    // text-align: left;
+    font-size: 50px;
+    font-weight: 600;
+    color: rgb(255, 90, 90);
+    cursor: pointer;
+  }
+  .msgbtTd {
+    display: flex;
+    width: 40px;
+    text-align: center;
+  }
+  .msgbt {
+    margin-left: 30px;
+    margin-right: 5px;
+    margin-top: 20px;
+  }
+  .mainfdate {
+    padding-right: 25px;
+    text-align: right;
+    color: rgb(108, 108, 108);
+    font-weight: 400;
+  }
+  p {
+    margin-bottom: 10px;
+    font-family: 'Dongle', sans-serif;
+    font-size: 40px;
+  }
+  .fccommant {
+    background-color: #fff;
+    border-radius: 0 0 10px 10px;
+    // margin-left: -5px;
   }
 
-    //     .mainbox::-webkit-scrollbar {
-    //   width: 0px;
-    //   /* 스크롤바의 너비 */
-    // }
-  
-    //     .mainbox::-webkit-scrollbar-thumb {
-    //   height: 30%;
-    //   /* 스크롤바의 길이 */
-    //   background: rgb(248, 245, 245);
-    //   /* 스크롤바의 색상 */
-  
-    //   border-radius: 10px;
-    // }
-  
-    //  .mainbox::-webkit-scrollbar-track {
-    //   background: rgb(248, 245, 245);
-    //   /*스크롤바 뒷 배경 색상*/
-    // }
-
-.mainfeedbox {
-  display: inline-block;
- margin-bottom: 40px;
-}
-
-.mainlistbox {
-  // margin-right: 20px;
-  // padding-right: 10px;
-  // border: 1px solid black;
-  background-color: #fff;
-  border-radius: 10px 10px 0 0;
-  // border-collapse: collapse;
-}
-
-.mainuserid {
+  .fcinput {
+    margin-left: 20%;
+    margin-bottom: 10px;
+    margin-right: 5px;
+    height: 40px;
+    // background: transparent;
+    border-radius: 10px;
     background-color: rgb(248, 245, 245);
-      border-radius: 80px;
-      height: 80px;
-      width: 80px;
-}
+    text-align: center;
+    border: 0px solid black;
+    font-size: 15px;
+    font-family: 'Dongle', sans-serif;
+    font-size: 20px;
+  }
+  .inputbt {
+    width: 40px;
+    height: 40px;
+  }
 
-.mainfcbox {
-          border: none;
-}
+  .insertfcomment {
+    display: flex;
+  }
+  .mainbox {
+    // display: block;
+    // margin:20px;
+    margin: auto;
+    width: 700px;
+    // height: 200px;
+    // overflow: auto;
+  }
 
+  //     .mainbox::-webkit-scrollbar {
+  //   width: 0px;
+  //   /* 스크롤바의 너비 */
+  // }
 
-.fclist {
-  // margin-left: 20px;
-  display:block;
-  // height:100px;
-  width:100%;
-  // overflow: auto;
-}
+  //     .mainbox::-webkit-scrollbar-thumb {
+  //   height: 30%;
+  //   /* 스크롤바의 길이 */
+  //   background: rgb(248, 245, 245);
+  //   /* 스크롤바의 색상 */
 
-// .fclist::-webkit-scrollbar {
-//   width:0px;
-//   /* 스크롤바의 너비 */
-// }
+  //   border-radius: 10px;
+  // }
 
-// .fclist::-webkit-scrollbar-thumb {
-//   height: 30%;
-//   /* 스크롤바의 길이 */
-//   background: rgb(248, 245, 245);;
-//   /* 스크롤바의 색상 */
+  //  .mainbox::-webkit-scrollbar-track {
+  //   background: rgb(248, 245, 245);
+  //   /*스크롤바 뒷 배경 색상*/
+  // }
 
-//   border-radius: 10px;
-// }
+  .mainfeedbox {
+    display: inline-block;
+    margin-bottom: 30px;
+  }
 
-// .fclist::-webkit-scrollbar-track {
-//   background: rgb(248, 245, 245);;
-//   /*스크롤바 뒷 배경 색상*/
-// }
+  .mainlistbox {
+    // margin-right: 20px;
+    // padding-right: 10px;
+    // border: 1px solid black;
+    background-color: #fff;
+    border-radius: 10px 10px 0 0;
+    // border-collapse: collapse;
+  }
 
+  .mainuserid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(248, 245, 245);
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+    border-radius: 80px;
+    height: 80px;
+    width: 80px;
+    font-weight: 500;
+  }
 
+  .mainfcbox {
+    border: none;
+    font-size: 25px;
+    font-weight: 400;
+    width: 350px;
+  }
 
+  .fclist {
+    // margin-left: 20px;
+    display: block;
+    // height:100px;
+    width: 100%;
+    // overflow: auto;
+  }
 
+  // .fclist::-webkit-scrollbar {
+  //   width:0px;
+  //   /* 스크롤바의 너비 */
+  // }
+
+  // .fclist::-webkit-scrollbar-thumb {
+  //   height: 30%;
+  //   /* 스크롤바의 길이 */
+  //   background: rgb(248, 245, 245);;
+  //   /* 스크롤바의 색상 */
+
+  //   border-radius: 10px;
+  // }
+
+  // .fclist::-webkit-scrollbar-track {
+  //   background: rgb(248, 245, 245);;
+  //   /*스크롤바 뒷 배경 색상*/
+  // }
 }
