--- a/src/css/boardarticle.scss
+++ b/src/css/boardarticle.scss
@@ -6,7 +6,10 @@
         margin: 0;
         height: 40px;
         padding: 0;
-        font-size: 20px;
+        font-size: 23px;
+      }
+      a {
+        font-size: 23px;
       }
     }
     .boardLike {
