--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -58,20 +58,28 @@
       justify-content: center;
       margin-bottom: 15px;
       .searchCategoryList {
+        text-align: center;
         font-family: 'Dongle', sans-serif;
-        font-size: x-large;
+        font-size: 23px;
         width: 100px;
         height: 40px;
         border-radius: 5px;
         border: 0.5px solid #ccc;
         background-color: rgba(152, 152, 255, 0.179);
         margin-right: 5px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
         cursor: pointer;
         &:hover {
           background-color: rgb(0, 0, 255);
           opacity: 0.4;
           color: white;
           transition: 0.5s ease-out;
+        }
+        option {
+          background-color: white;
+          color: black;
         }
       }
     }
