--- a/src/css/boardupdate.scss
+++ b/src/css/boardupdate.scss
@@ -37,12 +37,13 @@
             p {
             }
             input {
+              font-family: 'Dongle', sans-serif;
               width: 500px;
               padding-right: 30px;
               height: 40px;
               margin-top: 0px;
               margin-bottom: 0px;
-              font-size: 15px;
+              font-size: 23px;
               text-align: left;
               padding-left: 15px;
               border: 1px solid #ccc;
@@ -57,7 +58,7 @@
               height: 40px;
               margin-top: 0px;
               margin-bottom: 0px;
-              font-size: 25px;
+              font-size: 28px;
               text-align: left;
               padding-left: 15px;
               //   border: 1px solid #ccc;
@@ -68,12 +69,13 @@
         .updateContent {
           td {
             input {
+              font-family: 'Dongle', sans-serif;
               width: 500px;
               padding-right: 30px;
               height: 150px;
               margin-top: 0px;
               margin-bottom: 0px;
-              font-size: 15px;
+              font-size: 23px;
               text-align: left;
               padding-left: 15px;
               border: 1px solid #ccc;
