--- a/src/css/boardwrite.scss
+++ b/src/css/boardwrite.scss
@@ -20,12 +20,13 @@
         tr {
           .writeTitle {
             input {
+              font-family: 'Dongle', sans-serif;
               width: 500px;
-              padding-right: 30px;
+              padding-right: 15px;
               height: 40px;
               margin-top: 0px;
               margin-bottom: 0px;
-              font-size: 15px;
+              font-size: 23px;
               text-align: left;
               padding-left: 15px;
               border: 1px solid #ccc;
@@ -33,35 +34,68 @@
             }
           }
           td {
-          }
-          select {
-            font-family: 'Dongle', sans-serif;
-            font-size: x-large;
-            width: 100px;
-            height: 40px;
-            border-radius: 5px;
-            border: 0.5px solid #ccc;
-            background-color: rgba(152, 152, 255, 0.179);
-            margin-right: 5px;
-            cursor: pointer;
-            &:hover {
-              background-color: rgb(0, 0, 255);
-              opacity: 0.4;
-              color: white;
-              transition: 0.5s ease-out;
+            font-size: 20px;
+            p {
+              margin: 0;
+              font-size: 25px;
+            }
+            .boardSelect {
+              text-align: center;
+              font-family: 'Dongle', sans-serif;
+              font-size: 20px;
+              width: 100px;
+              height: 40px;
+              border-radius: 5px;
+              border: 0.5px solid #ccc;
+              background-color: rgba(152, 152, 255, 0.179);
+              margin-right: 5px;
+              -webkit-appearance: none;
+              -moz-appearance: none;
+              appearance: none;
+              cursor: pointer;
+              &:hover {
+                background-color: rgb(0, 0, 255);
+                opacity: 0.4;
+                color: white;
+                transition: 0.5s ease-out;
+              }
+              option {
+                background-color: white;
+                color: black;
+              }
             }
           }
+          // select {
+          //   font-family: 'Dongle', sans-serif;
+          //   font-size: x-large;
+          //   width: 100px;
+          //   height: 40px;
+          //   border-radius: 5px;
+          //   border: 0.5px solid #ccc;
+          //   background-color: rgba(152, 152, 255, 0.179);
+          //   margin-right: 5px;
+          //   cursor: pointer;
+          //   &:hover {
+          //     background-color: rgb(0, 0, 255);
+          //     opacity: 0.4;
+          //     color: white;
+          //     transition: 0.5s ease-out;
+          //   }
+          // }
           .writeContent {
-            width: 500px;
-            padding-right: 30px;
-            height: 150px;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            font-size: 15px;
-            text-align: left;
-            padding-left: 15px;
-            border: 1px solid #ccc;
-            border-radius: 15px;
+            textarea {
+              font-family: 'Dongle', sans-serif;
+              width: 500px;
+              // padding-right: 30px;
+              padding: 10px 15px;
+              height: 150px;
+              margin-top: 0px;
+              margin-bottom: 0px;
+              font-size: 23px;
+              text-align: left;
+              border: 1px solid #ccc;
+              border-radius: 15px;
+            }
           }
           .writeUpdate {
             font-family: 'Dongle', sans-serif;
