--- a/src/css/photo.scss
+++ b/src/css/photo.scss
@@ -1,8 +1,9 @@
 #root {
   .out_img {
-    margin-top: 70px;
+    margin-top: 50px;
+    margin-bottom: 90px;
     width: 280px;
-    height: 280px;
+    height: 220px;
     // border: 1px solid red;
     .imgs {
       //   padding-top: 15px;
@@ -12,32 +13,31 @@
       object-fit: fill;
       display: flex;
       border-radius: 15px 15px 15px 15px;
-      //   img {
-      //     border-radius: 15px;
-      //     width: 300px;
-      //     height: 300px;
-      //   }
     }
   }
   // photo.js +
-  .D_but {
-    // margin-right: 40px;
-    margin-top: 50px;
-    margin-bottom: 10px;
-    font-size: 20px;
-    font-family: 'Dongle', sans-serif;
-    padding: 0 15px;
-    width: 100px;
-    height: 30px;
-    border: 1px solid #ccc;
-    background-color: rgba(152, 152, 255, 0.179);
-    border-radius: 3px;
-    &:hover {
-      background-color: red;
-      opacity: 0.5;
-      color: white;
-      cursor: pointer;
-      transition: 0.5s ease-out;
+  .D_butWrapper {
+    margin-top: 30px;
+    margin-bottom: -40px;
+    .D_but {
+      // margin-top: 40px;
+      margin-right: 60px;
+      // margin-bottom: 10px;
+      font-size: 20px;
+      font-family: 'Dongle', sans-serif;
+      padding: 0 15px;
+      width: 100px;
+      height: 30px;
+      border: 1px solid #ccc;
+      background-color: rgba(152, 152, 255, 0.179);
+      border-radius: 3px;
+      &:hover {
+        background-color: red;
+        opacity: 0.5;
+        color: white;
+        cursor: pointer;
+        transition: 0.5s ease-out;
+      }
     }
   }
 }
