--- a/src/css/member.scss
+++ b/src/css/member.scss
@@ -1,3 +1,57 @@
 #root {
-  padding-top: 54px;
+  .boardList {
+    .boardTable {
+      margin: 0 auto;
+      width: 900px;
+      text-align: center;
+      font-size: 20px;
+      border-radius: 15px;
+      //   border: 1px solid #ccc;
+      background-color: rgb(255, 255, 255);
+      padding-top: 15px;
+      padding-bottom: 15px;
+      //   cursor: pointer;
+
+      thead {
+        th {
+          background-color: rgb(156, 156, 248);;
+          font-size:22px;
+        }
+      }
+      tbody {
+        font-size:19px;
+        font-weight: 0;
+        color:rgb(71, 71, 71);
+        tr {
+          background-color:rgba(194, 194, 248, 0.15);
+          &:hover {
+            background-color:rgb(83, 83, 255);
+            transition: background 0.5s;
+          }
+          td {
+            margin-left: 0px;
+            margin-right: 0px;
+            // border-bottom: 1px solid rgba(204, 204, 204, 0.648);
+          }
+        }
+      }
+    }
+  }
+  .tablePage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.dbutton{
+  background-color:rgb(83, 83, 255);
+  width:50px;
+  border-radius: 8px;
+  color:#fff;
+  border-width:2px;
+  border-color: rgb(156, 156, 248);
+  margin-top:4px;
+  margin-bottom:4px;
+  padding-top: 1px;
 }
