--- a/src/css/member.scss
+++ b/src/css/member.scss
@@ -1,7 +1,44 @@
 #root {
   .boardList {
+    margin-top: 30px;
+
+    .memberSearch {
+      margin-bottom: 30px;
+      .memberSearchBox {
+        font-size: 30px;
+        font-family: 'Dongle', sans-serif;
+        padding: 0 15px;
+        width: 300px;
+        height: 40px;
+        border-left: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        border-right: none;
+        border-radius: 5px 0px 0px 5px;
+      }
+      .memberSearchBtn {
+        font-family: 'Dongle', sans-serif;
+        font-size: x-large;
+        width: 60px;
+        height: 42px;
+        border-radius: 0 5px 5px 0;
+        border-left: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        border-right: 1px solid #ccc;
+        background-color: white;
+        cursor: pointer;
+        &:hover {
+          background-color: rgb(0, 0, 255);
+          opacity: 0.7;
+          color: white;
+          transition: 0.5s ease-out;
+        }
+      }
+    }
     .boardTable {
       margin: 0 auto;
+
       width: 900px;
       text-align: center;
       font-size: 20px;
@@ -14,18 +51,18 @@
 
       thead {
         th {
-          background-color: rgb(156, 156, 248);;
-          font-size:22px;
+          // background-color: rgb(156, 156, 248);
+          font-size: 22px;
         }
       }
       tbody {
-        font-size:19px;
+        font-size: 19px;
         font-weight: 0;
-        color:rgb(71, 71, 71);
+        color: rgb(71, 71, 71);
         tr {
-          background-color:rgba(194, 194, 248, 0.15);
+          // background-color: rgba(194, 194, 248, 0.15);
           &:hover {
-            background-color:rgb(83, 83, 255);
+            background-color: rgb(83, 83, 255);
             transition: background 0.5s;
           }
           td {
@@ -44,14 +81,22 @@
   }
 }
 
-.dbutton{
-  background-color:rgb(83, 83, 255);
-  width:50px;
-  border-radius: 8px;
-  color:#fff;
-  border-width:2px;
-  border-color: rgb(156, 156, 248);
-  margin-top:4px;
-  margin-bottom:4px;
-  padding-top: 1px;
+.dbutton {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 20px;
+  font-family: 'Dongle', sans-serif;
+  padding: 0 15px;
+  width: 80px;
+  height: 30px;
+  border: 1px solid #ccc;
+  background-color: rgba(152, 152, 255, 0.179);
+  border-radius: 3px;
+  &:hover {
+    background-color: red;
+    opacity: 0.5;
+    color: white;
+    cursor: pointer;
+    transition: 0.5s ease-out;
+  }
 }
