--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     .boardheaders {
       margin-top: 40px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       height: 40px;
       display: flex;
       align-items: center;
@@ -14,6 +14,8 @@
       background: none;
       font-family: 'Dongle', sans-serif;
       font-size: 40px;
+      p {
+      }
     }
     .boardSearch {
       display: flex;
