--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -79,10 +79,10 @@
           color: white;
           transition: 0.5s ease-out;
         }
-        option {
-          background-color: white;
-          color: black;
-        }
+        // option {
+        //   background-color: white;
+        //   color: black;
+        // }
       }
     }
   }
